Fix spacing on navbar burger

--- a/themes/lhs/assets/sass/leighhack.scss
+++ b/themes/lhs/assets/sass/leighhack.scss
@@ -83,6 +83,10 @@ p {
 	}
 }
 
+.navbar-burger {
+	height: 4rem !important;
+}
+
 // -------------------------------------------------------
 // Base 
 // -------------------------------------------------------
